frontend/src/styles_backup.css
body {
    font-family: "Nanum Gothic", sans-serif;
    background-color: white;
  }
  
  .card {
    cursor: pointer;
    border: none;
    box-shadow:none;
    margin-bottom: 5px; 
    
  }
  
  .modal-content img {
    width: 100%;
  }

  /* styles.css */
  .navbar {
    display: flex;
    flex-wrap: nowrap;
    justify-content: flex-start;
    gap: 15px;
    padding: 10px 0 20px;
    position: sticky;
    top: 0;
    z-index: 1000;
    background-color: white;

    overflow-x: auto;
    white-space: nowrap;
    width: 100%;

    /* 스크롤 바 스타일 */
    scrollbar-width: thin;
    scrollbar-color: #ccc transparent;
    -webkit-overflow-scrolling: touch;
  }

  .navbar::-webkit-scrollbar {
    height: 6px;
  }
  .navbar::-webkit-scrollbar-thumb {
    background-color: #ccc;
    border-radius: 10px;
  }
  .navbar::-webkit-scrollbar-track {
    background: transparent;
  }
  
  .navbar button {
    background-color: white;
    color: black;
    border: 1px black;
    padding: 10px 20px;
    border-radius: 20px;
    font-size: 12px;
    font-weight: bold;
    cursor: pointer;
    transition: all 0.3s ease-in-out;

    flex-shrink: 0;
    white-space: nowrap;
  }
  
  .navbar button:hover {
    background-color: #ff9900;
    color: white;
    border-color: black;
  }
  
  .menu-title {
    font-family: "Arial Black", sans-serif;
    font-size: 20px;
    font-weight: bold;
    text-align: left;
    margin: 30px 0 15px;
    color: #333;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
  }
  
  /* 화살표 버튼 */
  .arrow-button {
    background: none;
    border: none;
    font-size: 24px;
    font-weight: bold;
    cursor: pointer;
    padding: 0 10px;
    color: #333;
    transition: color 0.3s;
  }

  .arrow-button:hover {
    color: #ff9900;
  }

  .payment-text-button {
    font-size: 22px;
    font-weight: bold;
    color: #ff4500;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
    cursor: pointer;
    border: none;
    background: none;
    padding: 10px;
    transition: color 0.3s ease, text-shadow 0.3s ease;
    display: block;
    margin: 0 auto;
    text-align: center;
    animation: glow 1.5s infinite alternate;
  }

  .payment-text-button:hover {
    color: #ff6347;
    text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
  }

html {
    scroll-padding-top: 120px;
}

